--- a/src/Component/componentStyles.css
+++ b/src/Component/componentStyles.css
@@ -158,7 +158,7 @@ line-height: var(--Line-Height-Body-M, 24px); /* 150% */
 padding: 32px 64px 64px 64px;
 flex-direction: column;
 align-items: center;
-gap: 40px;
+gap: 16px;
 align-self: stretch;
 background: var(--surface-primary, #F0F3FF);
 }
@@ -178,40 +178,6 @@ font-size: var(--Font-Size-body-M, 16px);
 font-style: normal;
 font-weight: 400;
 line-height: var(--Line-Height-Body-M, 24px); /* 150% */
-}
-.hero h1{
-    background: linear-gradient(93deg, #4B4B4B 49.97%, #B1B1B1 89.22%);
-background-clip: text;
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-text-align: center;
-width: 700px;
-/* heading/h3 */
-font-family: Poppins;
-font-size: var(--Font-Size-Heading-h3, 40px);
-font-style: normal;
-font-weight: 600;
-line-height: var(--Line-Height-Heading-h3, 48px); /* 120% */
-}
-@media (max-width: 1120px) {
-    .hero{
-        padding: 16px 32px 32px 32px;
-    }
-   
-}
-
-@media (max-width:764px) {
-    .hero h1{
-width: 100%;
-font-size: 32px;
-line-height: 40px;
-    }
-}
-@media (max-width: 1120px) {
-    .hero{
-        padding: 16px 16px 64px 16px;
-        gap: 20px;
-    }
 }
 
 
@@ -259,7 +225,7 @@ align-self: stretch;
 background: var(--surface-primary, #F0F3FF);
   }
 
-  .aboutMeSection h1{
+  .aboutMeSection h1, .sectionHeader{
     width: 764px;
     text-align: center;
     background: linear-gradient(93deg, #4B4B4B 49.97%, #B1B1B1 89.22%);
@@ -337,7 +303,7 @@ align-self: stretch;
     .aboutMeSection{
         padding: 64px 32px;
     }
-    .aboutMeSection h1{
+    .aboutMeSection h1,  .sectionHeader{
         width: 100%;}
         .aboutMeCards{
       
@@ -354,7 +320,7 @@ align-self: stretch;
         padding: 32px 16px;
         gap: 32px;
     }
-    .aboutMeSection h1{
+    .aboutMeSection h1,  .sectionHeader{
         font-size: 24px;
         line-height: 30px;
     }
